.iac/k8s-loc/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cezzis-com-cocktails-mcp
  namespace: cezzis
  labels:
    app: cezzis-com-cocktails-mcp
    app.kubernetes.io/part-of: cezzis
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "300"
spec:
  type: ClusterIP
  selector:
    app: cezzis-com-cocktails-mcp
  ports:
    - name: http
      port: 7999
      targetPort: 7999
      protocol: TCP
